feat:change mode/language

--- a/public/locales/cn/translation.json
+++ b/public/locales/cn/translation.json
@@ -1,5 +1,6 @@
 {
   "Home":{
-    "test":"中文"
+    "title":"总览",
+    "section":"Vite（法语意为 \"快速的\"，发音 /vit/，发音同 \"veet\"）是一种新型前端构建工具，能够显著提升前端开发体验。"
   }
 }
