--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "Home":{
-    "test":"english"
+    "title":"Overview",
+    "section":"Vite (French word for \"quick\", pronounced /vit/, like \"veet\") is a build tool that aims to provide a faster and leaner development experience for modern web projects."
   }
 }
